Wed Dec 17 19:23:28 2008  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/matrix.rb: shut up warning. [ruby-dev:37481] [Bug #899]

Wed Dec 17 15:44:28 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_pop_m): use enum ary_take_pos_flags.

	* array.c (rb_ary_push_m): add modification check before actual
	  operation.   [ruby-dev:37440]

Wed Dec 17 15:35:39 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* configure.in (OBJDUMP, OBJCOPY): 
	  *BSD's ports and MacPorts prefix GNU binutils with 'g'.

Wed Dec 17 11:39:39 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/bigdecimal/test_bigdecimal.rb (TestBigDecimal#test_hash):
	  shut up warning.  see [ruby-dev:37437]

Wed Dec 17 11:01:35 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_hash): gets rid of collisions between differen
	  encoding strings.  [ruby-core:20526]

Wed Dec 17 09:50:19 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/ruby/test_metaclass.rb: removed codes for my debugging.
	  sorry. [ruby-dev:37470]

Tue Dec 16 22:55:11 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* bin/testrb: set $0.

Tue Dec 16 22:42:16 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit.setup_argv): sorry, fixed wrong commit.

Tue Dec 16 22:15:17 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/minitest/unit.rb (MiniTest::Assertions#assert_instance_of):
	  should assert by instance_of?, not ===.  [ruby-dev:37458]

	* lib/minitest/unit.rb (MiniTest::Assertions#assert_instance_of):
	  typo fixed.

Tue Dec 16 21:59:29 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit.setup_argv): ALT_SEPARATOR support.

Tue Dec 16 21:59:02 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (VpToString): reverted modification
	  (that caused a bug) in r20359.  [ruby-dev:37370]

	* ext/bigdecimal/bigdecimal.c (BigDecimal_limit): comment update.
	  [ruby-dev:37465]

Tue Dec 16 20:34:44 2008  Tanaka Akira  <akr@fsij.org>
